<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".FirstDetailPage">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:src="@drawable/bynrylogo" />
    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edt_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_firstname"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:layout_margin="20dp"
            android:textSize="@dimen/text_size_medium"
            />
        <EditText
            android:id="@+id/edt_lastname"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_firstname"
            android:hint="@string/edt_lastname"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/marign_medium"
            />
        <EditText
            android:id="@+id/edt_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:layout_below="@id/edt_lastname"
            android:hint="@string/edt_mobile"
            android:maxEms="10"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/marign_medium"
            />
        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@id/edt_mobile"
            android:hint="@string/edt_password"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/marign_medium"
            />
        <EditText
            android:id="@+id/edt_cpassword"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:hint="@string/edt_cpassword"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/marign_medium"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_back"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/btn_login_blue"
            />
        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_next"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/margin_small"
            android:background="@color/btn_login_blue"
            />
    </LinearLayout>
</LinearLayout>