<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bynrylogo" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_logo"
            android:layout_margin="@dimen/margin"
            android:hint="@string/edt_username"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium" />


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_username"
            android:layout_margin="@dimen/margin"
            android:hint="@string/edt_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_password"
            android:layout_margin="@dimen/btn_margin"
            android:background="@color/btn_login_blue"
            android:text="@string/btn_login"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/btn_signup_lightblue"
            android:text="@string/btn_signup"
            android:textSize="@dimen/text_size_medium" />
    </RelativeLayout>
</LinearLayout>