<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddressDetails">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:src="@drawable/bynrylogo" />
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/edt_temp_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_temp_address"
            android:textAlignment="center"
            android:layout_margin="@dimen/marign_medium"
            android:textSize="@dimen/text_size_medium"
            />

        <EditText
            android:id="@+id/edt_per_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_firstname"
            android:hint="@string/edt_per_address"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/marign_medium"
            />
        <Spinner
            android:id="@+id/spinner_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_lastname"
            android:layout_margin="@dimen/marign_medium"
            android:entries="@array/state"
            >
        </Spinner>

        <Spinner
            android:id="@+id/spinner_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_state"
            android:entries="@array/city"
            android:layout_margin="@dimen/marign_medium">
        </Spinner>

        <EditText
            android:id="@+id/edt_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spinner_city"
            android:hint="@string/edt_pincode"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_medium"
            android:layout_margin="@dimen/marign_medium"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative1"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/btn_login_blue"
            android:text="@string/btn_back"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:background="@color/btn_login_blue"
            android:text="@string/btn_next"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>
</LinearLayout>