<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_custom_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:paddingTop="@dimen/padding_custom"
        android:text="@string/txt_custom_alertbox"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="112dp"
        android:layout_below="@+id/txt_custom_box"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_radio"
            android:layout_marginTop="@dimen/margin_radio"
            android:layout_weight="1"
            android:background="@drawable/corner_shape"
            android:text="@string/btn_no"
            android:textColor="#ffff" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_radio"
            android:layout_marginTop="@dimen/margin_radio"
            android:layout_weight="1"
            android:background="@drawable/corner_shape"
            android:text="@string/btn_yes"
            android:textColor="#ffff" />
    </LinearLayout>
</RelativeLayout>

